--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
+    <title>Adam Basheer's CV</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
                 <td colspan="2">Phone No : 0249170067/0209930771</td>
             </tr>
             <tr>
-                <td colspan="2">Email : adam.bashheer@amalitech.com</td>
+                <td colspan="2">Email : adam.basheer@amalitech.com</td>
             </tr>
 
             <tr>
@@ -68,8 +68,6 @@
                 </td>
             </tr>
 
-
-
             <tr>
                 <td>BSc. Computer Science & Engineering</td>
                 <td>2012 – 2016</td>
@@ -85,8 +83,6 @@
             <tr>
                 <td colspan="2">University Practice Senior High School </td>
             </tr>
-
-
             <tr>
                 <td>Basic Education</td>
                 <td>2004 – 2007</td>
@@ -94,8 +90,6 @@
             <tr>
                 <td colspan="2">Tuwohofo Holly International School </td>
             </tr>
-
-
             <tr>
                 <td colspan="2">
                     <h3>ICT PROFICIENCY</h3>
@@ -165,15 +159,12 @@
                     </ul>
                 </td>
             </tr>
-
-
             <tr>
                 <td colspan="2">
                     <h3>REFEREES</h3>
                 </td>
             </tr>
             <tr>
-
                 <td>
                     Mr. John K.E. Edumadze Deputy Director, University of Cape Coast – Information Communication & Technology Centre (ICT CENTRE). Tel: (+233) 0243942749 Email: jedumadze@ucc.edu.gh
                 </td>
@@ -181,29 +172,22 @@
                     Mr. William Agangiba Head of department, University of Mines and Technology – Department of Computer Science & Engineering. Tel: (+233) 248757291 Email: wagangiba@gmail.com
                 </td>
             </tr>
-
-
-
             <tr>
                 <td colspan="2">
                     <h3>SOCIAL MEDIA HANDLES</h3>
                 </td>
             </tr>
             <tr>
-
                 <tr>
                     <td colspan="2">
                         <ul>
                             <li>
-
                                 <a href="https://twitter.com/boybery?s=09">Visit my twitter page here!</a>
                             </li>
                             <li>
-
-                                <a href="https://www.facebook.com/dewayne.parker2/"> Visit my Facebook page here!</a>
+                             <a href="https://www.facebook.com/dewayne.parker2/"> Visit my Facebook page here!</a>
                             </li>
                             <li>
-
                                 <a href="https://www.instagram.com/boyberybash/">Visit my Instagram page here!</a>
                             </li>
                         </ul>
